Fixed client info and case update spacing issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -155,7 +155,7 @@ header {
 
 #case-detail-contents {
     position: relative;
-    top: 70px;
+    top: 100px;
     height: 100%;
     width: 100%;
     display: flex;
